--- a/django_project/templates/themes/bdai.html
+++ b/django_project/templates/themes/bdai.html
@@ -33,7 +33,7 @@
         </div><!--/.navbar-collapse -->
         <div class="navbar-collapse navbar-right collapse">
           <div class="navbar-right">
-            <a href="#" class="navbar-btn btn btn-success">Donate</a>
+            <a href="https://www.networkforgood.org/donation/ExpressDonation.aspx?ORGID2=36-2390156" class="navbar-btn btn btn-success">Donate</a>
 	  </div>
         </div><!--/.navbar-collapse -->
       </div>
