--- a/footer/templates/footer.html
+++ b/footer/templates/footer.html
@@ -13,7 +13,6 @@
             <li>
 	      <a href="http://www.hemophilia.org">
 	        <img src="/static/images/national_hemophilia_foundation.png" alt="National Hemophilia Foundation" title="National Hemophilia Foundation">
-		
               </a>
 	      <ul>
               </ul>
@@ -21,7 +20,6 @@
             <li>
 	      <a href="http://illinois.healthcharities.org">
 	        <img src="/static/images/community_health_charities_illinois.png" alt="Community Health Charities Illinois" title="Community Health Charities Illinois">
-		
               </a>
 	      <ul>
               </ul>
@@ -29,7 +27,6 @@
             <li>
 	      <a href="http://www.hemophiliafed.org">
 	        <img src="/static/images/hemophilia_federation_of_america.png" alt="Hemophilia Federation of America" title="Hemophilia Federation of America">
-		
               </a>
 	      <ul>
               </ul>
@@ -39,7 +36,6 @@
 	  <ul>
             <li>
 	      <a href="https://www.facebook.com/BDAIllinois">
-	        
 		Facebook
               </a>
 	      <ul>
@@ -47,7 +43,6 @@
 	    </li>
             <li>
 	      <a href="https://twitter.com/BDAIllinois">
-	        
 		Twitter
               </a>
 	      <ul>
@@ -55,7 +50,6 @@
 	    </li>
             <li>
 	      <a href="http://www.linkedin.com/company/bleeding-disorders-alliance-illinois">
-	        
 		LinkedIn
               </a>
 	      <ul>
@@ -63,37 +57,24 @@
 	    </li>
             <li>
 	      <a href="mailto:info@bdai.org">
-	        
 		info@bdai.org
               </a>
 	      <ul>
               </ul>
 	    </li>
             <li>
-	      
-	        
-		210 S DesPlaines St.
-Chicago, IL
-60661-550
-	      <ul>
-              </ul>
+              210 S DesPlaines St.
+              Chicago, IL
+              60661-550
 	    </li>
             <li>
-	      
-	        
-		(312) 427 1495
-	      <ul>
-              </ul>
+              (312) 427 1495
 	    </li>
             <li>
-	      
-	        
-		(312) 427 1602 (fax)
-	      <ul>
-              </ul>
+              (312) 427 1602 (fax)
 	    </li>
 	  </ul>
         </div>
       </div>
-      <p class="pull-right">© Bleeding Disorders Alliance Illinois 2015</p><p>
+      <p class="pull-right">© Bleeding Disorders Alliance Illinois {% now "Y" %}</p><p>
     </p></footer>
