--- a/django_project/templates/themes/camp.html
+++ b/django_project/templates/themes/camp.html
@@ -33,12 +33,14 @@
         </div><!--/.navbar-collapse -->
         <div class="navbar-collapse navbar-right collapse">
           <div class="navbar-right">
-            <a href="#" class="navbar-btn btn btn-success">Donate</a>
+            <a href="https://www.networkforgood.org/donation/ExpressDonation.aspx?ORGID2=36-2390156" class="navbar-btn btn btn-success">Donate</a>
 	  </div>
         </div><!--/.navbar-collapse -->
       </div>
     </div>
+    <div class="container">
     {{ content|safe }}
+    </div>
     <hr>
     {% include "footer.html" %}
 
