--- a/homepage/templates/home.html
+++ b/homepage/templates/home.html
@@ -31,6 +31,7 @@
       <div class="caption">
         <h3>{{ event.name }}</h3>
 	<h4 class="times">{{ event.time }}</h4>
+	<h5 class="location">{{ event.location | linebreaks }}</h5>
         {{ event.description | linebreaks }}
         <p>{% for action in event.actions.all %}
 	<a class="btn btn-primary" href="{{ action.href }}">{{ action.name }} &raquo;</a>
