--- a/django_project/templates/themes/camp.html
+++ b/django_project/templates/themes/camp.html
@@ -1,62 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ title }} | Camp Warren Jyrch</title>
+{% extends "themes/base.html" %}
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/static/css/styles.css">
+{% block themeclass %}theme_camp{% endblock %}
 
-     </head>
-  <body class="theme_camp">
-    <div class="navbar navbar-default navbar-static-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/camp/"><img src="/static/images/camp.png" alt="Camp Warren Jyrch"></a>
-        </div>
-        <div class="navbar-collapse navbar-left collapse">
-          <ul class="nav navbar-nav">
-	    {% for item  in menu_items %}
-            <li{% if item.active %} class="active"{% endif %}><a href="{{item.target}}">{{item.name}}</a></li>
-            {% endfor %}
-	    {% if editlink %}
-            <li><a href="{{editlink}}"><em>Edit This!</em></a></li>
-	    {% endif %}
-          </ul>
-        </div><!--/.navbar-collapse -->
-        <div class="navbar-collapse navbar-right collapse">
-          <div class="navbar-right">
-            <a href="https://www.networkforgood.org/donation/ExpressDonation.aspx?ORGID2=36-2390156" class="navbar-btn btn btn-success">Donate</a>
-	  </div>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </div>
-    <div class="container">
-    {{ content|safe }}
-    </div>
-    <hr>
-    {% include "footer.html" %}
+{% block logo %}<a class="navbar-brand" href="/camp/"><img src="/static/images/camp.png" alt="Bleeding Disorders Alliance Illinois"></a>{% endblock %}
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script src="/static/js/scripts.js"></script>
-  </body>
-</html>
+{% block title_suffix %}Camp Warren Jyrch{% endblock %}
