--- a/django_project/templates/themes/base.html
+++ b/django_project/templates/themes/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,9 +8,9 @@
     <title>{{ title }} | {% block title_suffix %}Bleeding Disorders Alliance Illinois{% endblock %}</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/bootstrap-theme.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/styles.css" %}">
 
      </head>
   <body class="{% block themeclass %}theme_bdai{% endblock %}">
@@ -22,7 +23,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          {% block logo %}<a class="navbar-brand" href="/"><img src="/static/images/bdai.png" alt="Bleeding Disorders Alliance Illinois"></a>{% endblock %}
+          {% block logo %}<a class="navbar-brand" href="/"><img src="{% static "images/bdai.png" %}" alt="Bleeding Disorders Alliance Illinois"></a>{% endblock %}
         </div>
         <div class="navbar-collapse navbar-left collapse">
           <ul class="nav navbar-nav">
@@ -72,6 +73,6 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="/static/js/scripts.js"></script>
+    <script src="{% static "js/scripts.js" %}"></script>
   </body>
 </html>
