Added MailChimp subscribe link

--- a/django_project/templates/themes/base.html
+++ b/django_project/templates/themes/base.html
@@ -52,6 +52,7 @@
         <div class="navbar-collapse navbar-right collapse">
           <div class="navbar-right">
             <a href="https://www.networkforgood.org/donation/ExpressDonation.aspx?ORGID2=36-2390156" class="navbar-btn btn btn-success">Donate</a>
+            <a href="http://eepurl.com/C0k01" class="navbar-btn btn btn-primary">Subscribe</a>
 	  </div>
         </div><!--/.navbar-collapse -->
       </div>
